<!--

    Copyright 2020 Systems Research Group, University of St Andrews:
    <https://github.com/stacs-srg>

-->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <parent>
        <groupId>com.github.stacs-srg</groupId>
        <artifactId>common-pom</artifactId>
        <version>1.0.2</version>
    </parent>

    <artifactId>population-linkage</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>population-linkage</name>

    <description>Population linkage</description>
    <inceptionYear>2018</inceptionYear>

    <dependencies>

        <dependency>
            <groupId>com.github.stacs-srg</groupId>
            <artifactId>storr</artifactId>
            <version>1.0.1</version>
        </dependency>

        <dependency>
            <groupId>com.github.stacs-srg</groupId>
            <artifactId>ciesvium</artifactId>
            <version>1.0.2</version>
        </dependency>

        <dependency>
            <groupId>com.github.stacs-srg</groupId>
            <artifactId>population-records</artifactId>
            <version>1.0.3</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>uk.ac.standrews.cs</groupId>-->
<!--            <artifactId>data-kilmarnock</artifactId>-->
<!--            <version>1.0-SNAPSHOT</version>-->
<!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>uk.ac.standrews.cs</groupId>-->
<!--            <artifactId>data-skye</artifactId>-->
<!--            <version>1.0-SNAPSHOT</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>uk.ac.standrews.cs</groupId>
            <artifactId>valipop-synthetic-populations-scotland</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>uk.ac.standrews.cs</groupId>
            <artifactId>valipop-synthetic-populations-dominican-republic</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>uk.ac.standrews.cs</groupId>-->
<!--            <artifactId>data-umea</artifactId>-->
<!--            <version>1.0-SNAPSHOT</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>al-richard</groupId>
            <artifactId>metricbitblaster</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.18.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-csv</artifactId>
            <version>2.12.1</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>14.0</version>
        </dependency>

        <dependency>
            <groupId>org.modelmapper</groupId>
            <artifactId>modelmapper</artifactId>
            <version>2.3.0</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>28.1-jre</version>
        </dependency>

    </dependencies>

    <repositories>

        <repository>
            <id>uk.ac.standrews.cs.maven.repository</id>
            <name>School of Computer Science Maven Repository</name>
            <url>https://maven.cs.st-andrews.ac.uk/</url>
        </repository>

    </repositories>

</project>
